# event-planning-service

./: .env  Cargo.toml
migrations/: 20231201130658_create_table_users.up.sql  20231201130713_create_table_events.up.sql  20231201130744_create_table_participations.up.sql  20231201130802_create_table_comments.up.sql  20231201130814_create_table_files.up.sql  20231201130830_create_table_invitations.up.sql  20231231193303_notifications.down.sql  20231231193303_notifications.up.sql
src/: dto.rs  errors.rs  main.rs  models.rs
src/db/: event.rs  invitations.rs  mod.rs  user.rs
src/handlers/: auth.rs  event.rs  mod.rs  user.rs
src/service/: auth.rs  crypto.rs  event.rs  log.rs  mod.rs  user.rs
