[package]
name = "event-planning-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
bitflags = "2.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.1.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
futures-util = "0.3.29"
jsonwebtoken = "9.2.0"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
sha3 = { version = "0.10.8", features = ["asm", "oid", "reset"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
uuid = { version = "1.6.1", features = ["v5", "v4", "serde"] }
